# fastapi-vercel-test

./: Taskfile.yml  pyproject.toml  requirements.txt
api/: index.py
